Bug 800877 - Change the message back to a hard-coded English string. r=mbanner